# mongodb-backup-rust-ui

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  activate_service.sh
src/: config.rs  error.rs  main.rs  state.rs
src/auth/: extractor.rs  handlers.rs  mod.rs  password.rs
src/backup/: jobs.rs  mod.rs  runner.rs  scheduler.rs
src/handlers/: backups.rs  connections.rs  mod.rs  restore.rs  schedules.rs
src/storage/: connections.rs  mod.rs  schedules.rs  users.rs
static/: app.css  app.js  index.html  login.html  setup.html  styles.css  tailwind-config.js  ui.js
static/views/: backups.js  connections.js  jobs.js  restore.js
